--- a/week01/first-page.html
+++ b/week01/first-page.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Page</title>
+    <style>
+        body {
+            text-align: center;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        img {
+            width: 300px;
+            height: auto;
+            max-width: 100%;
+        }
+    </style>
 </head>
+
 <body>
     <h1>My First Page</h1>
-    <p>My favorite color is: </p>
+    <p>My favorite color is: Black</p>
+    <p>I am learning Web Development</p>
+    <p>I'm Adriana Sandoval. I've been married for 12 years and have a son and a daughter. And my
+        favorite
+        moments will always be spending time with them.
+
+        I'm 39 years old and new to the world of programming. I'm grateful to be in this program.
+    </p>
+    <img src="images/family_picture.jpeg" alt="family picture">
 </body>
+
 </html>
