:memo: Change name file

--- a/week01/Favorite-city.html
+++ b/week01/Favorite-city.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Favorite City</title>
 </head>
+
 <body>
     <h1>My Favorite City</h1>
     <p>My favorite city is Tokyo, Japan.</p>
-    <p>Tokyo is the capital of Japan and the most populous city in the world, known for its fascinating fusion of ancient tradition and futuristic modernity.</p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6Dx2SFVbVL9AVYEFrTLvE3zlB9V6Ul3Xj2A&s" alt="Tokyo, Japan">
+    <p>Tokyo is the capital of Japan and the most populous city in the world, known for its
+        fascinating fusion of ancient tradition and futuristic modernity.</p>
+    <img
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6Dx2SFVbVL9AVYEFrTLvE3zlB9V6Ul3Xj2A&s"
+      alt="Tokyo, Japan">
 
 </body>
+
 </html>
