--- a/index.html
+++ b/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Adriana Sandoval Salamanca | 130 </title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Adriana Sandoval Salamanca | 130</h1>
+        <img src="images/h_family.jpg" alt="Hernandez S. Family" style="width: 200px;">
+        <p>Hi!</p>
+
+        <p>I'm Adriana Sandoval Salamanca. I'm 39 years old. I served a full-time mission in the
+            Peru Lima
+            Central Mission when I was 25. I returned home 13 years ago, and four months later I
+            married a man
+            who is very dedicated to the gospel and who encourages me to be better. That's why I've
+            started
+            studying again, even at my age.</p>
+
+        <p></p>We have two children, a boy and a girl. Unfortunately, due to health problems, I
+        couldn't have any
+        more children, but we are still happy amidst life's challenges. I really enjoy watching
+        movies with
+        them, laughing, and playing; those are my favorite moments.</p>
+
+        <br>This is a path that, although difficult for me, I feel I will be able to complete my
+        studies this
+        time.
+        </p>
+    </main>
+
+    <footer>
+        <p>©2026 😉 Adriana Sandoval Salamanca ☺️ Cajica - Colombia</p>
+    </footer>
 </body>
+
 </html>
