:bug: Fix <p> errors

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             started
             studying again, even at my age.</p>
 
-        <p></p>We have two children, a boy and a girl. Unfortunately, due to health problems, I
-        couldn't have any
-        more children, but we are still happy amidst life's challenges. I really enjoy watching
-        movies with
-        them, laughing, and playing; those are my favorite moments.</p>
+        <p>We have two children, a boy and a girl. Unfortunately, due to health problems, I
+            couldn't have any
+            more children, but we are still happy amidst life's challenges. I really enjoy watching
+            movies with
+            them, laughing, and playing; those are my favorite moments.</p>
 
-        <br>This is a path that, although difficult for me, I feel I will be able to complete my
-        studies this
-        time.
+        <p>This is a path that, although difficult for me, I feel I will be able to complete my
+            studies this
+            time.
         </p>
     </main>
 
