--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main>
-        <h1>Adriana Sandoval Salamanca | 130</h1>
+        <h1>Adriana Salamanca | WDD 130</h1>
         <img src="images/h_family.jpg" alt="Hernandez S. Family" style="width: 200px;">
         <p>Hi!</p>
 
