:bug: fix paragraf

--- a/index.html
+++ b/index.html
@@ -16,27 +16,18 @@
     </header>
     <main>
         <h1>Adriana Sandoval | WDD 130</h1>
-        <img src="images/h_family.jpg" alt="Hernandez S. Family" style="width: 200px;">
-        <p>Hi!</p>
-
-        <p>I'm Adriana Sandoval Salamanca. I'm 39 years old. I served a full-time mission in the
-            Peru Lima
-            Central Mission when I was 25. I returned home 13 years ago, and four months later I
-            married a man
-            who is very dedicated to the gospel and who encourages me to be better. That's why I've
-            started
-            studying again, even at my age.</p>
-
-        <p>We have two children, a boy and a girl. Unfortunately, due to health problems, I
-            couldn't have any
-            more children, but we are still happy amidst life's challenges. I really enjoy watching
-            movies with
-            them, laughing, and playing; those are my favorite moments.</p>
-
-        <p>This is a path that, although difficult for me, I feel I will be able to complete my
-            studies this
-            time.
-        </p>
+        <img src="images/profile.jpg" alt="Hernandez Family" style="width: 200px;">
+        <p>Hi!<br><br>
+            I'm Adriana Sandoval Salamanca. I'm 39 years old. I served a full-time mission in the
+            Peru Lima Central Mission when I was 25. I returned home 13 years ago, and four months
+            later I married a man who is very dedicated to the gospel and who encourages me to be
+            better. That's why I've started studying again, even at my age.<br><br>
+            We have two children, a boy and a girl. Unfortunately, due to health problems, I
+            couldn't have any more children, but we are still happy amidst life's challenges. I
+            really enjoy watching movies with them, laughing, and playing; those are my favorite
+            moments.<br><br>
+            This is a path that, although difficult for me, I feel I will be able to complete my
+            studies this time.</p>
     </main>
 
     <footer>
