--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adriana Sandoval | WDD 130 </title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     </header>
     <main>
         <h1>Adriana Sandoval | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hernandez Family" style="width: 200px;">
+        <img src="images/profile.jpg" alt="Hernandez Family">
         <p>Hi!<br><br>
             I'm Adriana Sandoval Salamanca. I'm 39 years old. I served a full-time mission in the
             Peru Lima Central Mission when I was 25. I returned home 13 years ago, and four months
