--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adriana Sandoval | WDD 130 </title>
+    <meta name="description"
+      content="This is the official page within my Web Fundamentals course learning process.">
+    <meta name="author" content="Adriana Sandoval Salamanca">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -30,7 +33,25 @@
             This is a path that, although difficult for me, I feel I will be able to complete my
             studies this time.</p>
     </main>
-
+    <aside>
+        <h2>Cajica - Colombia</h2>
+        <img src="images/cajica.jpg" alt="Cajica - Colombia">
+        <p>Cajicá is a city in the department of Cundinamarca, Colombia. It is known for its
+            pleasant climate
+            and its friendly people. Cajicá is a Colombian municipality in the department of
+            Cundinamarca,
+            located in the Sabana Centro Province, 17 km north of Bogotá. It is part of the Bogotá
+            Metropolitan
+            Area. It is the third most populous municipality in the province after Zipaquirá and
+            Chía. It is
+            situated at an altitude of 2,558 meters above sea level and has an average temperature
+            of 14 °C.
+            Cajicá is known for its virgin sheep's wool textiles, which artisans sell in the form of
+            tapestries
+            and rugs made on looms and hand-knotted. Its culture can be experienced at its Cultural
+            Center. It
+            is also home to the Nueva Granada campus of the Nueva Granada Military University.</p>
+    </aside>
     <footer>
         <p>©2026 😉 Adriana Sandoval Salamanca ☺️ Cajica - Colombia</p>
     </footer>
