--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://www.linkedin.com/in/adriana1033" target="_blank">LinkedIn Profile</a>
+            <a href="https://www.facebook.com/adriana.sandoval.9461799?locale=es_LA"
+              target="_blank">Facebook
+                Profile</a>
         </nav>
     </header>
     <main>
@@ -32,8 +36,17 @@
             moments.<br><br>
             This is a path that, although difficult for me, I feel I will be able to complete my
             studies this time.</p>
+        <ul class="box">
+            <!-- Add links to my Youtube Channel and my favorite song by my favorite band -->
+            <li><a href="https://www.youtube.com/channel/UCkWmSL_40wX1VZpgk-ww4Bg"
+                  target="_blank">My Youtube Channel</a></li>
+            <li><a href="https://www.youtube.com/watch?v=sUJkCXE4sAA" target="_blank">Favorite song
+                    by my favorite band</a></li>
+            <li><a href="https://www.peru.travel/es/atractivos/miraflores-y-costa-verde"
+                  target="_blank">My mission in Peru</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Cajica - Colombia</h2>
         <img src="images/cajica.jpg" alt="Cajica - Colombia">
         <p>Cajicá is a city in the department of Cundinamarca, Colombia. It is known for its
