--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About Us">
+    <meta name="description"
+      content="Rafting website is created to offer services to customers and enjoy the nature">
     <meta name="author" content="Adriana Sandoval Salamanca">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>About Us</title>
