--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-      content="Rafting website is created to offer services to customers and enjoy the nature">
+      content="RaftingAdventure Company website is created to offer services to customers and enjoy the nature">
     <meta name="author" content="Adriana Sandoval Salamanca">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>About Us</title>
@@ -13,9 +13,7 @@
 
 <body>
     <header>
-        <img
-          src="https://byui-cse.github.io/wdd130-ww-course/resources/images/logos/z-raftingbw.png"
-          alt="Logo">
+        <img src="images/logo.jpg" alt="Logo Rafting Adventure Company">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
