:sparkle: week4 work

--- a/index.html
+++ b/index.html
@@ -16,55 +16,65 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
-            <a href="https://www.linkedin.com/in/adriana1033" target="_blank">LinkedIn Profile</a>
+            <a href="https://www.linkedin.com/in/adriana1033" target="_blank">Linkedin</a>
             <a href="https://www.facebook.com/adriana.sandoval.9461799?locale=es_LA"
-              target="_blank">Facebook
-                Profile</a>
+              target="_blank">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>Adriana Sandoval | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hernandez Family">
-        <p>Hi!<br><br>
-            I'm Adriana Sandoval Salamanca. I'm 39 years old. I served a full-time mission in the
-            Peru Lima Central Mission when I was 25. I returned home 13 years ago, and four months
-            later I married a man who is very dedicated to the gospel and who encourages me to be
-            better. That's why I've started studying again, even at my age.<br><br>
-            We have two children, a boy and a girl. Unfortunately, due to health problems, I
-            couldn't have any more children, but we are still happy amidst life's challenges. I
-            really enjoy watching movies with them, laughing, and playing; those are my favorite
-            moments.<br><br>
-            This is a path that, although difficult for me, I feel I will be able to complete my
-            studies this time.</p>
-        <ul class="box">
-            <!-- Add links to my Youtube Channel and my favorite song by my favorite band -->
-            <li><a href="https://www.youtube.com/channel/UCkWmSL_40wX1VZpgk-ww4Bg"
-                  target="_blank">My Youtube Channel</a></li>
-            <li><a href="https://www.youtube.com/watch?v=sUJkCXE4sAA" target="_blank">Favorite song
-                    by my favorite band</a></li>
-            <li><a href="https://www.peru.travel/es/atractivos/miraflores-y-costa-verde"
-                  target="_blank">My mission in Peru</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Cajica - Colombia</h2>
-        <img src="images/cajica.jpg" alt="Cajica - Colombia">
-        <p>Cajicá is a city in the department of Cundinamarca, Colombia. It is known for its
-            pleasant climate
-            and its friendly people. Cajicá is a Colombian municipality in the department of
-            Cundinamarca,
-            located in the Sabana Centro Province, 17 km north of Bogotá. It is part of the Bogotá
-            Metropolitan
-            Area. It is the third most populous municipality in the province after Zipaquirá and
-            Chía. It is
-            situated at an altitude of 2,558 meters above sea level and has an average temperature
-            of 14 °C.
-            Cajicá is known for its virgin sheep's wool textiles, which artisans sell in the form of
-            tapestries
-            and rugs made on looms and hand-knotted. Its culture can be experienced at its Cultural
-            Center. It
-            is also home to the Nueva Granada campus of the Nueva Granada Military University.</p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Adriana Sandoval | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Hernandez Family">
+            <p>Hi!<br><br>
+                I'm Adriana Sandoval Salamanca. I'm 39 years old. I served a full-time mission in
+                the
+                Peru Lima Central Mission when I was 25. I returned home 13 years ago, and four
+                months
+                later I married a man who is very dedicated to the gospel and who encourages me to
+                be
+                better. That's why I've started studying again, even at my age.<br><br>
+                We have two children, a boy and a girl. Unfortunately, due to health problems, I
+                couldn't have any more children, but we are still happy amidst life's challenges. I
+                really enjoy watching movies with them, laughing, and playing; those are my favorite
+                moments.<br><br>
+                This is a path that, although difficult for me, I feel I will be able to complete my
+                studies this time.</p>
+            <ul class="box">
+                <!-- Add links to my Youtube Channel and my favorite song by my favorite band -->
+                <li><a href="https://www.youtube.com/channel/UCkWmSL_40wX1VZpgk-ww4Bg"
+                      target="_blank">My Youtube Channel</a></li>
+                <li><a href="https://www.youtube.com/watch?v=sUJkCXE4sAA" target="_blank">Favorite
+                        song
+                        by my favorite band</a></li>
+                <li><a href="https://www.peru.travel/es/atractivos/miraflores-y-costa-verde"
+                      target="_blank">My mission in Peru</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Cajica - Colombia</h2>
+            <img src="images/cajica.jpg" alt="Cajica - Colombia">
+            <p>Cajicá is a city in the department of Cundinamarca, Colombia. It is known for its
+                pleasant climate
+                and its friendly people. Cajicá is a Colombian municipality in the department of
+                Cundinamarca,
+                located in the Sabana Centro Province, 17 km north of Bogotá. It is part of the
+                Bogotá
+                Metropolitan
+                Area. It is the third most populous municipality in the province after Zipaquirá and
+                Chía. It is
+                situated at an altitude of 2,558 meters above sea level and has an average
+                temperature
+                of 14 °C.
+                Cajicá is known for its virgin sheep's wool textiles, which artisans sell in the
+                form of
+                tapestries
+                and rugs made on looms and hand-knotted. Its culture can be experienced at its
+                Cultural
+                Center. It
+                is also home to the Nueva Granada campus of the Nueva Granada Military University.
+            </p>
+        </aside>
+    </div>
     <footer>
         <p>©2026 😉 Adriana Sandoval Salamanca ☺️ Cajica - Colombia</p>
     </footer>
