:sparkle: rafting page second part

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -70,6 +70,10 @@
                     <img src="images/rafting22_600.jpg" alt="Necessary Protection">
                     <figcaption>Protection</figcaption>
                 </figure>
+                <figure>
+                    <img src="images/rafting42_600.jpg" alt="Rafting on the river">
+                    <figcaption>Rafting on the river</figcaption>
+                </figure>
             </div>
         </section>
     </main>
