--- a/wwr/about.html
+++ b/wwr/about.html
@@ -79,7 +79,7 @@
     </main>
     <footer>
         <p>©2026 😉 Adriana Sandoval Salamanca ☺️ Cajica - Colombia</p>
-        <div class="socialmedia">
+        <nav class="socialmedia">
             <a href="https://facebook.com" target="_blank" rel="noopener">
                 <img src="images/facebook-square.svg" alt="Facebook Icon">
             </a>
@@ -89,7 +89,7 @@
             <a href="https://instagram.com" target="_blank" rel="noopener">
                 <img src="images/instagram-square.svg" alt="Instagram Icon">
             </a>
-        </div>
+        </nav>
     </footer>
 </body>
 
