--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -52,16 +52,18 @@
 
                     <fieldset>
                         <legend>Message Purpose</legend>
-                        <label class="radio-label">
-                            <input type="radio" name="purpose" value="general" checked>
+                        <label class="radio-label" for="purpose-general">
+                            <input type="radio" id="purpose-general" name="purpose" value="general"
+                              checked>
                             General Inquiry
                         </label>
-                        <label class="radio-label">
-                            <input type="radio" name="purpose" value="reservation">
+                        <label class="radio-label" for="purpose-reservation">
+                            <input type="radio" id="purpose-reservation" name="purpose"
+                              value="reservation">
                             Reservation Question
                         </label>
-                        <label class="radio-label">
-                            <input type="radio" name="purpose" value="website">
+                        <label class="radio-label" for="purpose-website">
+                            <input type="radio" id="purpose-website" name="purpose" value="website">
                             Website Suggestion
                         </label>
                     </fieldset>
@@ -70,8 +72,8 @@
                     <textarea id="message" name="message" rows="5"
                       placeholder="Type here"></textarea>
 
-                    <label class="checkbox-label">
-                        <input type="checkbox" name="newsletter" value="yes">
+                    <label class="checkbox-label" for="newsletter">
+                        <input type="checkbox" id="newsletter" name="newsletter" value="yes">
                         Please Subscribe me to the monthly newsletter
                     </label>
 
@@ -85,7 +87,7 @@
             <div class="employee-profiles">
                 <figure class="employee-card">
                     <div class="employee-image">
-                        <img src="images/adri_cio.JPG" alt="Adriana Sandoval CIO">
+                        <img src="images/adri_cio.jpg" alt="Adriana Sandoval CIO">
                     </div>
                     <figcaption>Adriana Sandoval CIO</figcaption>
                 </figure>
@@ -106,7 +108,7 @@
     </main>
     <footer>
         <p>©2026 😉 Adriana Sandoval Salamanca ☺️ Cajica - Colombia</p>
-        <div class="socialmedia">
+        <nav class="socialmedia">
             <a href="https://facebook.com" target="_blank" rel="noopener">
                 <img src="images/facebook-square.svg" alt="Facebook Icon">
             </a>
@@ -116,7 +118,7 @@
             <a href="https://instagram.com" target="_blank" rel="noopener">
                 <img src="images/instagram-square.svg" alt="Instagram Icon">
             </a>
-        </div>
+        </nav>
     </footer>
 </body>
 
