:sparkle: final work

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description"
       content="RaftingAdventure Company website is created to offer services to customers and enjoy the nature">
     <meta name="author" content="Adriana Sandoval Salamanca">
-    <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/rafting.css">
     <title>About Us</title>
 </head>
 
