:memo: image fixed

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -87,7 +87,7 @@
             <div class="employee-profiles">
                 <figure class="employee-card">
                     <div class="employee-image">
-                        <img src="images/adri_cio.jpg" alt="Adriana Sandoval CIO">
+                        <img src="images/adri_cio.JPG" alt="Adriana Sandoval CIO">
                     </div>
                     <figcaption>Adriana Sandoval CIO</figcaption>
                 </figure>
